--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -53,8 +53,8 @@ jobs:
            uses: actions/checkout@v4
            with:
               node-version: '20.x'
-         - name: configure gitHub pages
-           uses: actions/checkout@v4
+         - name: configure GitHub Pages
+           uses: actions/configure-pages@v4
            with:
              static_site_generator: next
          - run: npm install
