--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -50,9 +50,9 @@ jobs:
            with:
              token: ${{ secrets.GITHUB_TOKEN }}
          - name: use node.js
-           uses: actions/checkout@v4
+           uses: actions/setup-node@v4
            with:
-              node-version: '20.x'
+             node-version: '20.x'
          - name: configure GitHub Pages
            uses: actions/configure-pages@v4
            with:
